# babylon

./: .dockerignore  .gitignore  .golangci.yml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  config.yml  docker-compose-simnet.yaml  docker-compose.yml  docker-compose.yml.debug  go.mod  go.sum  gosec.json  statesync.bash  vigilante.yaml
.chglog/: config.yml
.circleci/: config.yml
app/: ante.go  ante_btc_validation_decorator.go  app.go  app_test.go  encoding.go  export.go  genesis.go  modules.go  test_helpers.go  types.go  utils.go
btcstaking/: btc_staking.go  btcstaking_test.go  enhanced_staking.go  enhanced_staking_test.go  errors.go  identifiable_staking.go  identifiable_staking_test.go  identifiable_staking_types.go  scripts.go  scripts_utils.go  staking.go  staking_test.go  staking_testvectors_test.go  staking_utils.go  staking_utils_test.go  types.go  witness_utils.go
btctxformatter/: bbnformatter.go  formatter.go  formatter_test.go
client/: README.md
contracts/babylon-bindings/: Cargo.toml
contracts/babylon-bindings/examples/: schema.rs
contracts/babylon-bindings/schema/: babylon_query.json  current_epoch_response.json
contracts/babylon-bindings/src/: lib.rs  querier.rs  query.rs
contracts/test-contract/: Cargo.toml  Makefile
contracts/test-contract/artifacts/: babylon_contract-aarch64.wasm  checksums.txt  checksums_intermediate.txt
contracts/test-contract/schema/: babylon-contract.json
contracts/test-contract/schema/raw/: query.json  response_to_get_current_epoch.json
contracts/test-contract/src/: contract.rs  msg.rs  state.rs
docs/: Makefile  README.md  architecture.md  dev-reqs.md  run-node.md  staking-script.md  transaction-impl-spec.md
privval/: file.go  types.go
proto/: README.md  buf.gen.rust.yaml  buf.yaml
retry/: log.go  retry.go
scripts/: protocgen.sh  start.bash  statesync.bash  update_changelog.sh
simapp/: sim_bench_test.go  sim_test.go  state.go  utils.go
test/: integration_test.go  utils.go
types/: btc_config.go  btc_header_bytes.go  btc_header_bytes_test.go  btc_header_hash_bytes.go  btc_header_hash_bytes_test.go  btc_schnorr_eots.go  btc_schnorr_eots_test.go  btc_schnorr_pk.go  btc_schnorr_pk_test.go  btc_schnorr_pub_rand.go  btc_schnorr_pub_rand_test.go  btc_schnorr_sig.go  btc_schnorr_sig_test.go  btc_slashing_tx.go  btcutils.go  (+8 more)
wasmbinding/testdata/: Cargo.toml  README.md
wasmbinding/testdata/artifacts/: checksums.txt  checksums_intermediate.txt  testdata-aarch64.wasm  testdata.wasm
wasmbinding/testdata/src/: lib.rs
(+1014 files in other folders)
