[package]
name = "babylon-contract"
version = "0.0.0"
authors = ["BabylonChain Inc. <admin@babylonchain.io>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# Add feature "cranelift" to default if you need 32 bit or ARM support
default = []
# Use cranelift backend instead of singlepass. This is required for development on 32 bit or ARM machines.
cranelift = ["cosmwasm-vm/cranelift"]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-schema = "1.2.1"
cosmwasm-std = { version = "1.2.1", features = ["iterator", "ibc3"] }
cosmwasm-storage = { version = "1.2.1", features = ["iterator"] }
schemars = "0.8.3"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
babylon-bindings = { path = "../babylon-bindings" }

hex = "0.4.3"
sha2 = "0.10.6"
bls12_381 = "0.8.0"
tendermint = "0.30.0"

[dev-dependencies]
cosmwasm-vm = { version = "1.2.1", default-features = false, features = [
    "iterator",
    "stargate",
] }
